force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/BMCServiceDesk__SYSTemplate__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for templates.</description>
    <label>Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>