force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__allProfile__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__allProfile__c</fullName>
    <defaultValue>true</defaultValue>
    <label>All Profile</label>
    <type>Checkbox</type>
</CustomField>