force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__description__c</fullName>
    <inlineHelpText>Use this field to enter the description for the template.For example, you can create a template to define the New Hire process which automatically creates tasks associated with the incident template for the new employee.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>