force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__Export__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used internally to control trigger action configured for exporting Template from RF Template Migration package.</description>
    <inlineHelpText>Select this field to allow the record to be exported from the RF Template Migration Pentaho package.</inlineHelpText>
    <label>Tag for Export</label>
    <type>Checkbox</type>
</CustomField>