force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__Ignore_Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Ignore_Execution_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ignore Execution Order</label>
    <type>Checkbox</type>
</CustomField>