force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__keywords__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__keywords__c</fullName>
    <description>Use this field to enter keywords</description>
    <inlineHelpText>Enter keywords (separated by semicolon) that will help in suggesting templates for a record.</inlineHelpText>
    <label>Keywords</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>