force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Recurrence_Type__c</fullName>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>EveryWeekday</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>MonthlyNth</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>YearlyNth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>