force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__RecurrenceDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceDayOfMonth__c</fullName>
    <label>Recurrence Day Of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>