force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__RecurrenceDayOfWeekMask__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceDayOfWeekMask__c</fullName>
    <label>Recurrence Day Of Week</label>
    <length>7</length>
    <type>Text</type>
</CustomField>