force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__RecurrenceEndDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceEndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>