force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__RecurrenceInterval__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceInterval__c</fullName>
    <label>Recurrence Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>