force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__RecurrenceMinutes__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceMinutes__c</fullName>
    <label>Recurrence Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>