force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__SelfService_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SelfService_Display_Order__c</fullName>
    <label>SelfService Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>