force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__systemTemplate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__systemTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System templates can be applied on a record using workflows or triggers only. These templates are not available for selection in the Template lookup window in the Salesforce page layouts.</inlineHelpText>
    <label>System Template</label>
    <type>Checkbox</type>
</CustomField>