force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/fields/BMCServiceDesk__templateFor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__templateFor__c</fullName>
    <inlineHelpText>From the list of options, select the type of template you are creating. You can create a template for an incident, task ,change request ,release or request detail.</inlineHelpText>
    <label>Template For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Request Detail</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>