force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/validationRules/BMCServiceDesk__templateForRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__templateForRequired</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL( TEXT(BMCServiceDesk__templateFor__c) ) , ISBLANK(TEXT(BMCServiceDesk__templateFor__c)))</errorConditionFormula>
    <errorMessage>Please select Template For.</errorMessage>
</ValidationRule>