force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/validationRules/BMCServiceDesk__TemplateName.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__TemplateName</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(Name) , ISBLANK( Name))</errorConditionFormula>
    <errorMessage>Please enter Template Name</errorMessage>
</ValidationRule>