force-app/main/default/objects/BMCServiceDesk__SYSTemplate__c/validationRules/BMCServiceDesk__templateNameUniqueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__templateNameUniqueValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name , $ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name,NULLVALUE(Name, Name) ))),
IF(ISCHANGED(Name),
IF((Name) = (VLOOKUP($ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name , $ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name,Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
    <errorMessage>Duplicate Name</errorMessage>
</ValidationRule>